--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Miscelanea</string>
+    <string name="miscelanea_alberto">Miscelanea Alberto</string>
+    <string name="operando1">Operando1</string>
+    <string name="operando_2">Operando 2</string>
+    <string name="resultado">Resultado</string>
+    <string name="Resultado2">0</string>
+    <string name="fibonacci">Fibonacci</string>
+    <string name="factorial">Factorial</string>
+    <string name="potencia">Potencia</string>
+    <string name="limpiar">Limpiar</string>
 </resources>
